[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/mobs/Wind.gd" type="Script" id=1]
[ext_resource path="res://src/mobs/wind.png" type="Texture" id=2]
[ext_resource path="res://src/mobs/arrow.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
resource_local_to_scene = true

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[node name="Wind" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1, 5 )
texture = ExtResource( 3 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
amount = 10
lifetime = 0.01
preprocess = 0.5
texture = ExtResource( 2 )
emission_shape = 1
emission_sphere_radius = 10.0
direction = Vector2( 0, -1 )
spread = 0.0
gravity = Vector2( 0, 0 )
initial_velocity = 100.0
scale_amount = 0.5
scale_amount_curve = SubResource( 2 )

[node name="GustTimer" type="Timer" parent="."]
wait_time = 0.1

[connection signal="body_entered" from="." to="." method="_on_Wind_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Wind_body_exited"]
[connection signal="timeout" from="GustTimer" to="." method="_on_GustTimer_timeout"]
